--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="homestyle.css">
+<link rel="stylesheet" href="css/main.css">
 <title>e- Harmony</title>
 <link rel="shortcut icon" type="image/png" href="icon.png"/>
 <body>
