--- a/html/form.html
+++ b/html/form.html
@@ -2,7 +2,7 @@
 <html>
 <link rel="stylesheet" href="css/look.css">
 <title>e- Harmony</title>
-<link rel="shortcut icon" type="image/png" href="icon.png"/>
+<link rel="shortcut icon" type="image/png" href="img/icon.png"/>
 <body>
 
 <h1>Create your profile</h1>
