--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
               <br>
               <span class="job-title">Alkaline Earth Metal</span>
               <br>
-              <form action="strontiumprof.html">
+              <form action="html/stront.html">
                 <button style=" font-size: 13px; border-radius: 10px; padding: 5px"type="submit">See Profile</button>
               </form>
             </p>
@@ -56,7 +56,7 @@
             <p style="font-size: 22px; color: black; font-weight: bold;">Astatine
               <br>
               <span class="job-title">Non-metal (Unknown)</span>
-              <form action="astatineprof.html">
+              <form action="html/ast.html">
                 <button style=" font-size: 13px; border-radius: 10px; padding: 5px"type="submit">See Profile</button>
               </form>
             </p>
@@ -81,7 +81,7 @@
         <div class="details jane">
             <p style="font-size: 22px; color: black; font-weight: bold;">Germanium<br>
               <span class="job-title">Metalloid</span>
-              <form action="germaniumprof.html">
+              <form action="html/germ.html">
                 <button style=" font-size: 13px; border-radius: 10px; padding: 5px" type="submit">See Profile</button>
               </form>
             </p>
