--- a/html/form.html
+++ b/html/form.html
@@ -184,7 +184,7 @@
 
 <br>
 <br>
-<form action="submit.html" method="post">
+<form action="html/sub.html" method="post">
 			<input type="submit" class="registerbtn" value="Submit">
 		</form>
 		</div>
