--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <body>
 <!--First section-->
 
-	<div style="background-image: url(background.png); background-size: cover; height:480px; padding-top: 80px; text-align: center;">
-		<img src="small.png" style="height:150px; border-radius: 50%; border: 10px solid #b0e0e6;">
+	<div style="background-image: url(img/background.png); background-size: cover; height:480px; padding-top: 80px; text-align: center;">
+		<img src="img/small.png" style="height:150px; border-radius: 50%; border: 10px solid #b0e0e6;">
 		<h1 style="font-size: 100px; color: white; margin:10px;">e- Harmony</h1>
 		<h2 style="font-size:40px; color: white;"><em>"Where perfect chemistry between elements is our goal"</em></h2>
-		<p style="font-size:25px; color: rgb(176,224,230);"><a href="createprofile.html";>Start Matching</a></p>
+		<p style="font-size:25px; color: rgb(176,224,230);"><a href="html/form.html";>Start Matching</a></p>
 	</div>
 
 <!--Second Section-->
