--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<img src="img/small.png" style="height:150px; border-radius: 50%; border: 10px solid #b0e0e6;">
 		<h1 style="font-size: 100px; color: white; margin:10px;">e- Harmony</h1>
 		<h2 style="font-size:40px; color: white;"><em>"Where perfect chemistry between elements is our goal"</em></h2>
-		<p style="font-size:25px; color: rgb(176,224,230);"><a href="html/form.html";>Start Matching</a></p>
+		<p style="font-size:25px; color: rgb(176,224,230);"><a href="form.html";>Start Matching</a></p>
 	</div>
 
 <!--Second Section-->
