--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <p style="font-size: 22px; color: black; font-weight: bold;">Astatine
               <br>
               <span class="job-title">Non-metal (Unknown)</span>
-              <form action="html/ast.html">
+              <form action="ast.html">
                 <button style=" font-size: 13px; border-radius: 10px; padding: 5px"type="submit">See Profile</button>
               </form>
             </p>
