--- a/form.html
+++ b/form.html
@@ -184,8 +184,8 @@
 
 <br>
 <br>
-<form action="sub.html" method="post">
-			<input type="submit" class="registerbtn" value="Submit">
+<form action="submit.html">
+	<button style="font-size: medium; background-color: #005757; color: white; padding: 16px 20px; margin: 8px 0; border: none; cursor: pointer; width: 100%; opacity: 0.9;" type="submit">Submit</button>
 		</form>
 		</div>
 </body>
