--- a/ast.html
+++ b/ast.html
@@ -55,7 +55,7 @@
 	<label for="met">Metal</label><br>
 	<input type="radio" id="metl" name="cat" value="Metalloid" disabled>
 	<label for="metl">Metalloid</label><br>
-	<input type="radio" id="nm" name="cat" value="Non-Metal" disabled>
+	<input type="radio" id="nm" name="cat" value="Non-Metal" checked>
 	<label for="nm">Non-Metal</label><br>
 	<input type="radio" id="unk" name="unk" value="Unknown" checked>
 	<label for="unk">Unknown</label><br>
