--- a/germ.html
+++ b/germ.html
@@ -177,7 +177,7 @@
 				<label for="why2">Why?</label>
 			</div>
 			<div class="col-90">
-				<input type="text" id="why2" name="why2" placeholder="Because I like them spicy." disabled>
+				<input type="text" id="why2" name="why2" placeholder="Because I am temperature dependant due to my band gap size." disabled>
 			</div>
 		</div>
 		</div>
